# Alpha-Trading-Bot

./: .gitignore  .pre-commit-config.yaml  Backtest Plots.html  Backtest QS Plots.html  Documentation.txt  Predictions of the AI Trading.csv  Predictions of the Candlestick Pattern Trading.csv  Predictions of the Indicator Trading.csv  Predictions of the Momentum Trading.csv  README.md  a.xlsx  backtest.py  create_backtest.py  create_data.py  create_strategy.py  pyproject.toml  requirements.txt  setup.cfg  start.bat  🤖Welcome.py  🤖WelcomePage.py
.streamlit/: config.toml
app/: configuration.py  create_backtest.py  create_data.py  create_strategy.py  optimization.py  🤖Welcome.py
app/pages/: 01_📊 Data Module.py  02_💡Strategy Module.py  03_📈Backtest Module.py  04_⚡Optimization Module.py  05_📧Feedback Module.py  06_a.py
data/: AAPL-prices.csv  APPL-ohlcv.csv  APPL-ohlcv.xlsx  Untitled.ipynb  predictions.csv  requirements.txt  tickers.xlsx
pages/: 01_📊 Data Module.py  02_💡Strategy Module.py  03_📈Backtest Module.py  04_⚡Optimization Module.py  05_📧Feedback Module.py  06_talib.py
src/trading_bot/: create_backtest.py  create_data.py  create_strategy.py  🤖Welcome.py  🤖Welcome.py.603a368bc11be7d9f81e6f9cb2029437.tmp
src/trading_bot/pages/: 01_📊 Data Module.py  02_💡Strategy Module.py  04_⚡Optimization Module.py
style/: style.css
test/: test_trading_bot.py
