[tool.poetry]
name = "alpha"
version = "0.1.0"
description = ""
authors = ["fotino21 <ataturhan21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
candlestick = "^0.0.8"
pandas = "^1.5.3"
plotly = "^5.13.1"
requests = "^2.28.2"
scikit-learn = "^1.2.2"
streamlit = "^1.20.0"
ta = "^0.10.2"
yfinance = "^0.2.12"
matplotlib = "^3.7.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pre-commit = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
